overflow for title resolved

--- a/src/component/ProductItem/ProductItem.style.scss
+++ b/src/component/ProductItem/ProductItem.style.scss
@@ -1,3 +1,28 @@
 .ProductItem {
-    
+    padding-left: 0;
+    margin: 0 10px;
+    text-align: center;
+    position: relative;
+    min-width: 0;
+
+    &::before {
+        display: none;
+    }
+
+    .Image {
+        &-Image {
+            object-fit: cover;
+        }
+    }
+
+    &-Brand {
+        margin: 5px 0;
+    }
+    &-Title {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+
+    }
+
 }
